# matgfn

./: LICENSE  README.md  pyproject.toml  requirements.txt
dataset/: calculate_arcmof_amds.py  calculate_matgfn_amds.py  embed_amds.py  make_top_100_cifs.py  plot_amds.ipynb  train_agent.py
dataset/top_100_cifs_relaxed/: 001-ffc-10352_relax.cif  002-ffc-10339_relax.cif  003-ffc-10279_relax.cif  004-ffc-10256_relax.cif  005-ffc-10217_relax.cif  006-dmg-10164_relax.cif  007-cdl-e-10131_relax.cif  008-ffc-10108_relax.cif  009-ffc-10101_relax.cif  010-tsg-10025_relax.cif  011-ffc-10010_relax.cif  012-dnq-10007_relax.cif  013-dnq-10000_relax.cif  014-dmg-9985_relax.cif  015-ffc-9968_relax.cif  016-ffc-9951_relax.cif  017-dmg-9941_relax.cif  018-cdl-e-9941_relax.cif  019-dnq-9935_relax.cif  020-ffc-9917_relax.cif  021-dnq-9914_relax.cif  022-dnq-9908_relax.cif  023-ffc-9906_relax.cif  024-tsg-9903_relax.cif  025-tsg-9897_relax.cif  026-tsg-9896_relax.cif  027-ffc-9894_relax.cif  028-ffc-9888_relax.cif  029-ffc-9881_relax.cif  030-tsg-9873_relax.cif  031-eft-9871_relax.cif  033-ffc-9863_relax.cif  034-cdl-e-9856_relax.cif  035-tsg-9852_relax.cif  036-dmg-9850_relax.cif  037-tsg-9842_relax.cif  038-dnq-9841_relax.cif  039-dmg-9840_relax.cif  040-dnq-9839_relax.cif  041-tsg-9835_relax.cif  (+58 more)
dataset/top_100_cifs_unrelaxed/: 000-cdl-e-10879.cif  001-ffc-10352.cif  002-ffc-10339.cif  003-ffc-10279.cif  004-ffc-10256.cif  005-ffc-10217.cif  006-dmg-10164.cif  007-cdl-e-10131.cif  008-ffc-10108.cif  009-ffc-10101.cif  (+90 more)
notebooks/: hypergrid.ipynb  reticular_materials.ipynb
(+10 files in other folders)
