[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matgfn"
version = "0.1"
authors = [
  { name="Flaviu Cipcigan", email="flaviu.cipcigan@ibm.com" },
  { name="Dan Cunnington", email="dancunnington@uk.ibm.com" },
  { name="Jonathan Booth", email="jonathan.booth@stfc.ac.uk" }
] 
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch==2.1.0",
  "nglview==3.0.8",
  "tqdm==4.66.1",
  "gymnasium==0.29.1",
  "numpy==1.26.0",
  "matplotlib==3.8.0",
  "pymatgen==2023.10.4",
  "pormake==0.1.2",
  "scikit-learn==1.3.2"
]
